# luvinha

./: .gitignore  TODO.md  backlog.md  main.py  pyproject.toml
app/: __init__.py  app.py  styles.tcss
app/screens/base_screen/: __init__.py  base_screen.py
app/screens/cheat/: __init__.py  cheat.py  cheat.tcss
app/screens/classic_mode/: __init__.py  classic_mode.py  classic_mode.tcss  guess_item.py  guess_item.tcss
app/screens/give_up/: __init__.py  give_up.py  give_up.tcss
app/screens/how_to_play/: __init__.py  how_to_play.py  how_to_play.tcss
app/screens/leaderboard/: __init__.py  leaderboard.py  leaderboard.tcss
app/screens/main_menu/: __init__.py  main_menu.py  main_menu.tcss
app/screens/mode_selection/: __init__.py  mode_selection.py  mode_selection.tcss
app/screens/quit_confirmation/: __init__.py  quit_confirmation.py  quit_confirmation.tcss
app/screens/win/: __init__.py  win.py  win.tcss
glove/: __init__.py  glove.py  pos_filter.py  validator.py
leaderboard/: __init__.py  leaderboard.py
luvinha/: app.py
luvinha/screens/: base_screen.py  classic_mode.py  how_to_play.py  main_menu.py  mode_selection.py  quit_confirmation.py
luvinha/screens/classic_mode/: classic_mode.py
luvinha/screens/how_to_play/: how_to_play.py
luvinha/screens/main_menu/: main_menu.py
slides/: slides.md  solarized-light.json
tests/: conftest.py  test_classic_mode.py  test_glove.py  test_how_to_play.py  test_leaderboard.py  test_leaderboard_screen.py  test_mode_selection.py  test_pos_filter.py  test_validator.py
(+2 files in other folders)
