[project]
name = "luvinha"
version = "0.1.0"
description = "Luvinha - Um jogo de palavras"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.19.0",
    "numpy>=2.4.6",
    "pyspellchecker>=0.9.0",
    "safetensors>=0.8.0",
    "textual>=8.2.7",
]

[project.scripts]
luvinha = "main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*", "glove*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "textual-dev>=1.8.0",
]
